<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ui_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_description"
        style="@style/UiKit.Body.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/meera_user_complain_additional_title"
        android:textColor="@color/color_soft_black"
        android:textSize="16sp" />

    <TextView
        style="@style/UiKit.Header.Subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/meera_user_complain_additional_subtitle"
        android:textColor="@color/color_soft_black" />

    <com.meera.uikit.widgets.cell.UiKitCell
        android:id="@+id/rb_dialog_complaint_hide_posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F5F6F7"
        app:cellPosition="top"
        app:cellRightElement="right_radio"
        app:cellTitleValue="@string/meera_user_complain_hide_profile_posts"
        tools:cellCityValue="" />

    <com.meera.uikit.widgets.cell.UiKitCell
        android:id="@+id/rb_dialog_complaint_hide_moment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F5F6F7"
        app:cellPosition="top"
        app:cellRightElement="right_radio"
        app:cellTitleValue="@string/meera_user_complain_hide_profile_moments"
        tools:cellCityValue="" />

    <com.meera.uikit.widgets.cell.UiKitCell
        android:id="@+id/rb_dialog_complaint_blocked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F5F6F7"
        app:cellPosition="bottom"
        app:cellRightElement="right_radio"
        app:cellTitleValue="@string/meera_user_complain_blocked"
        tools:cellCityValue="" />

    <com.meera.uikit.widgets.buttons.UiKitButton
        android:id="@+id/v_dialog_complaint_btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_complain_aplpy" />

</LinearLayout>
