<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/ll_permission_root"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_permission_icon"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_permission_request" />

    <TextView
        android:id="@+id/tv_permission_title"
        style="@style/BlackSemibold22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/allow_access_to_photo" />

    <TextView
        android:id="@+id/tv_permission_desc"
        style="@style/GrayA7A5Regular16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/allow_access_to_photo_desc" />

    <TextView
        android:id="@+id/tv_permission_action_view"
        style="@style/WhiteRegular16"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="48dp"
        android:background="@drawable/purple_button_ripple"
        android:gravity="center"
        android:text="@string/allow_access" />

</LinearLayout>
