<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_permission_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_meera_permission_request" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_permission_title"
        style="@style/UiKit.Header.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/photos_not_showing"
        android:textColor="@color/uiKitColorForegroundPrimary"
        app:lineHeight="20sp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_permission_desc"
        style="@style/UiKit.Body.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/photos_not_showing_desc"
        android:textColor="@color/uiKitColorForegroundSecondary"
        app:lineHeight="22sp" />

    <com.meera.uikit.widgets.buttons.UiKitButton
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/allow_access"
        app:buttonHeightMode="buttonText36"
        app:buttonType="filled" />

</merge>
